--- a/css/home_style.css
+++ b/css/home_style.css
@@ -11,11 +11,12 @@
 
 .container {
     width: 85vw;
-    min-height: 80vh;
+    height: 78vh;
     display: grid;
     padding: 0;
+    margin: 0;
     grid-template-columns: 27% 26% 15% 27%;
-    grid-template-rows: 48% 38% 8%;
+    grid-template-rows: 45% 35% 12%;
     grid-template-areas:
         "welcome education wave projects"
         "welcome tech tech projects"
@@ -152,14 +153,14 @@
 }
 
 .wave {
-    width: 100%;
+    width: 200%;
     height: 200%;
     background: #eeeeee;
     display: flex;
     flex-direction: column;
     position: relative;
     overflow: auto;
-    border-radius: 20px;
+    border-radius: 5px;
 
 }
 
@@ -381,7 +382,6 @@
             "projects"
             "quote";
         grid-gap: 20px;
-        padding-bottom: 10px;
     }
 
     #welcome-photocard {
